<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OldLace"
    tools:context=".DataItemSet">

        <Button
            android:id="@+id/data_name"
            android:visibility="gone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_60"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/item_data_name"
            android:text="@string/data_1"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_data_name"
            android:visibility="visible"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_60"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/item_data_name"
            android:text="@string/data_1"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/data_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_130"
            android:layout_height="@dimen/dp_70"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/button_rad"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28" />

        <Button
            android:id="@+id/data_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_130"
            android:layout_height="@dimen/dp_70"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/button_blue"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/edit_data_name"
            android:layout_above="@id/data_save"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/layout_item"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"></LinearLayout>
                </ScrollView>
        </RelativeLayout>
</RelativeLayout>