<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OldLace"
    android:id="@+id/main_layout"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/but_start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/dp_185"
        android:layout_height="@dimen/dp_70"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_start"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_38"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/but_set"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/dp_105"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_set"
        android:text="@string/set"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/data_name"
        android:transitionName="data_trsnsition"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_70"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_data_name"
        android:text="@string/data_1"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/sp_38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_set" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/but_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_name">

        <Button
            android:visibility="visible"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/but_lottery"
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_290"
            android:background="@drawable/lottrey_start"
            android:text="" />

        <LinearLayout
            android:id="@+id/layout_lottery_result"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/but_lottery_result"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/dp_180"
                android:layout_height="@dimen/dp_180"
                android:layout_gravity="center"
                android:background="@drawable/lotteryball_green"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/dp_120"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tV_lottery_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="@color/DuckSauce"
                android:textSize="@dimen/dp_60"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="6dp"
        android:text="Bear in the snow "
        android:gravity="end"
        android:textColor="@color/black_50"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>